syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/greetings";
package messages.greetings;

import "messages/meta.proto";

message Greeting {
	string id = 1;
	string channel_id = 2;
	string user_id = 3;
	bool enabled = 4;
	string text = 5;
	bool is_reply = 6;
	bool processed = 7;
}

message GetAllResponse {
	repeated Greeting greetings = 1;
}

message GetByIdRequest {
	string id = 1;
}

message CreateRequest {
	string user_id = 1;
	string text = 2;
	bool is_reply = 3;
	bool enabled = 4;
}

message PutRequest {
	string id = 1;
	CreateRequest greeting = 2;
}

message DeleteRequest {
	string id = 1;
}

message PatchRequest {
	string id = 1;
	bool enabled = 2;
}
